--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* ALL */
+
 @import url('https://fonts.cdnfonts.com/css/anamortee');
     body{
         margin: 0;
@@ -97,6 +99,7 @@
         top: 50vh;
         transform: translateY(-50%);
     }
+
     .links a img {
         width: 20px;
     }
@@ -112,6 +115,7 @@
         width: 50%;
         padding: 24px;
     }
+
     .col img {
         width: 100%;
     }
@@ -172,171 +176,6 @@
         -moz-box-sizing: border-box;
         box-sizing: border-box;
     }
-
-    .scroll {
-        position: absolute;
-        bottom: 50px;
-        left: 50%;
-        transform: translateX(-50%);
-        display: flex;
-        flex-direction: column;
-        height: 60px;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    @keyframes changeMargin {
-        from {
-          margin-top: 0px;
-        }
-      
-        to {
-          margin-top: 30px;
-        }
-      }
-      
-      .scroll img {
-        width: 30px;
-        animation-duration: 1s;
-        animation-name: changeMargin;
-        animation-iteration-count: infinite;
-        animation-direction: alternate;
-      }
-
-
-    #portfolio {  
-        max-width: 70em;
-        float: none;
-        margin: auto; 
-        -webkit-column-count: 4; 
-        -moz-column-count: 4;
-        column-count: 4;
-        -webkit-column-gap: 1rem;
-        -moz-column-gap: 1rem;
-        column-gap: 1rem;
-        -webkit-column-width: 25;
-        -moz-column-width: 25%;
-        column-width: 25%;
-        margin-bottom: 150px;
-    }
-    .tile { 
-        display: none;
-        position: relative;
-    }
-    .scale-anm {
-        margin: 0 0 1rem;
-        width: 100%; 
-        border-radius: 4px;
-        overflow: hidden;
-    }
-    .tile img {
-        max-width: 100%; 
-        height: auto;
-        display: block; 
-        width: 100%;
-    }
-    .tile::after {
-        content: "";
-        position: absolute;
-        bottom: 0;
-        height: 0;
-        width: 100%;
-        border-top-left-radius: 200px 40px;
-        border-top-right-radius: 200px 40px;
-        background-color: #00000030;
-        transition: all .5s ease-out;
-    }
-    .tile:hover::after {
-        height: 130%;
-    }
-    /* .tile img:hover {
-        filter: brightness(0.5);
-        transition-duration: .3s;
-    }
-    .tile::after {
-        content: "";
-        display: block;
-        width: 4px;
-        height: 4px;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        opacity: 0;
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: 4px 4px;
-        background-image: url(assets/icons/eye.png);
-        transition-duration: .3s;
-    }
-    .tile:hover::after {
-        opacity: 1;
-        width: 32px;
-        height: 32px;
-        background-size: 32px 32px;
-        background-image: url(assets/icons/eye.png);
-    } */
-    .tile img:hover:after {
-        opacity: 1;
-    }
-    .toolbar {
-        display: flex;
-        justify-content: center;
-        padding: 50px 0 100px;
-    }
-    .btn {
-        position: relative;
-        font-family: "DM Sans", sans-serif;
-        font-weight: 100;
-        font-size: 16px;
-        letter-spacing: 6px;
-        font-style: normal;
-        text-transform: uppercase;
-        text-decoration: none;
-        cursor: pointer;
-        display: inline-block;
-        padding: .5rem 1rem;
-        margin: 0;
-        height: auto;
-        color: #fff;
-        background-color: inherit;
-        border: none;
-    }
-    .btn.active:after {
-        content: "";
-        position: absolute;
-        left: 30px;
-        right: 30px;
-        bottom: -10px;
-        height: 1px;
-        background-color: #fff;
-    }
-
-    .centered {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .description {
-        padding: 30px 0 100px;
-    }
-    
-    @media (max-width: 850px) {
-        #portfolio {  
-            padding: 0 1rem;
-            -webkit-column-count: 2; 
-            -moz-column-count: 2;
-            column-count: 2;
-            -webkit-column-gap: 1rem;
-            -moz-column-gap: 1rem;
-            column-gap: 1rem;
-            -webkit-column-width: 50%;
-            -moz-column-width: 50%;
-            column-width: 50%;
-        }
-    }
-
-
 
     /* MOUSE */
       
@@ -418,80 +257,6 @@
   transform: translateZ(-2px);
 }
 
-
-
-
-
-/* FORMULAR */
-
-#form {
-    width: 100%;
-}
-
-.fields {
-    display: flex;
-    flex-direction: column;
-    padding: 36px 0;
-    border-top: 1px solid #FFF;
-}
-
-.fields label {
-    font-size: 20px;
-    font-weight: 600;
-}
-
-.fields input, .fields textarea {
-    background: none;
-    border: none;
-    padding: 0;
-    margin-top: 12px;
-    font-size: 20px;
-    font-weight: 400;
-    font-family: "DM Sans", sans-serif;
-    color: #fff;
-}
-
-.fields input:focus, .fields textarea:focus {
-    outline: none;
-}
-
-#form button {
-    width: 100%;
-    padding: 24px 0;
-    border: none;
-    border-radius: 8px;
-    font-size: 20px;
-    font-weight: 600;
-    font-family: "DM Sans", sans-serif;
-    background-color: #3D3D3D;
-    color: #fff;
-}
-
-/* CONTACT */
-
-img.img-contact {
-    width: 300px;
-}
-
-
-
-/* VIDEO */
-
-img.link-video:hover {
-    filter: brightness(0.7) contrast(1.2);
-}
-
-
-
-/* FOR DESKTOP */
-
-@media (min-width: 850px) {
-    .m-pr-50 {
-        padding-right: 50px;
-    }
-    .row {width: 70vw}
-}
-
 /* FOR MOBILE */
 
 @media (max-width: 850px) {
@@ -505,14 +270,6 @@ img.link-video:hover {
     #landscape3 {
         background-size: 160vw;
     }
-    .toolbar {
-        padding: 30px 0 10px;
-        margin-bottom: 30px;
-        overflow-x: scroll;
-    }
-    ::-webkit-scrollbar-thumb:hover {
-        background: #555;
-      }
     .row {
         flex-direction: column;
         max-width: 100vw;
