--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@
         display: flex;
         flex-direction: row;
         align-items: center;
+        justify-content: space-between;
         max-width: 70vw;
         margin: 50px 0;
     }
