--- a/videos.css
+++ b/videos.css
@@ -17,6 +17,7 @@ img.link-video:hover {
 
 @media (min-width: 850px) {
     .m-pr-50 {
+        width: auto;
         padding-right: 50px;
     }
     .row {width: 70vw}
