--- a/style.css
+++ b/style.css
@@ -268,6 +268,14 @@
     .menu, .links {
         display: none;
     }
+    .header {
+        right: auto;
+        padding: 0;
+    }
+    .img.logo {
+        top: 20px;
+        left: 20px;
+    }
     #landscape3 {
         background-size: 160vw;
     }
